# eps-assist-me

./: .flake8  .gitallowed  .gitignore  .gitleaksignore  .grype.yaml  .pre-commit-config.yaml  .tool-versions  .trivyignore.yaml  Makefile  README.md  _config.yml  cdk.json  eslint.config.mjs  nhsdigital-eps-cdk-constructs-1.0.0.tgz  package-lock.json  package.json  pre-commit-config.yml  pyproject.toml  requirements_bedrockLoggingConfigFunction  requirements_preprocessingFunction  requirements_slackBotFunction  sonar-project.properties  tsconfig.defaults.json  zizmor.yml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer /: Dockerfile
.github/: dependabot.yml
.github/actions/sync_documents/: action.yml  sync_documents.yml
.github/actions/update_confluence_jira/: action.yml
.github/scripts/: call_mark_jira_released.sh  create_env_release_notes.sh  create_int_rc_release_notes.sh  delete_stacks.sh  find_s3_bucket.sh  fix_cdk_json.sh  get_current_dev_tag  get_target_deployed_tag.sh
.github/workflows/: cdk_package_code.yml  cdk_release_code.yml  ci.yml  create_release_notes.yml  delete_old_cloudformation_stacks.yml  deploy-dev-auto.yml  pr_title_check.yml  pull_request.yml  release.yml  release_all_stacks.yml  run_ragas_evaluation.yml  run_regression_tests.yml  sync_documents.yml
_data/: dev-pr_deployments.csv  dev_deployments.csv  dev_latest.csv  environments.csv  int_deployments.csv  int_latest.csv  prod_deployments.csv  prod_latest.csv  qa_deployments.csv  qa_latest.csv  ref_deployments.csv  ref_latest.csv
prompts/: systemPrompt.txt
raw_docs/: hl7v3_fhir_mapping_table_for_dispensing_suppliers.docx
release_notes/: v1.0.10.md  v1.0.11.md  v1.0.12.md  v1.0.13.md  v1.0.14.md  v1.0.15.md  v1.0.16.md  v1.0.6.md  v1.0.7.md  v1.0.8.md  v1.0.9.md
sample_docs/: dispensing_scal.md  eps_101.md  eps_output.md  hl7v3_fhir_mapping_table_for_dispensing_suppliers.md  prescribing_scal.md  reference_guide.md  scal_notice.md
scripts/: convert_docs_to_markdown.py  fix_cfn_guard.sh  load-kb.sh  run_cfn_guard.sh  run_regression_tests.py  run_sync.sh  switch_stack.sh  sync_docs.sh  test_conflict.sh
