[tool.poetry]
name = "eps-assist-me"
version = "0.0.1-alpha"
description = "EPS Assist Me"
authors = [
    "EPS Team"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-assist-me"
package-mode = false


[tool.poetry.dependencies]
python = "^3.14"


[tool.poetry.scripts]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pre-commit = "^4.5.1"
cfn-lint = "^1.47.0"
black = "^26.3.1"
flake8 = "^7.3.0"
jinja2 = "^3.1.6"
pip-licenses = "^5.5.1"
click = "^8.3.0"
rich = "^14.3.3"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"
moto = {extras = ["ssm"], version = "^5.1.22"}


[tool.poetry.group.slackBotFunction.dependencies]
slack-bolt = "^1.25.0"
slack-sdk = "^3.41.0"
boto3 = "^1.42.73"
requests = "^2.33.0"
urllib3 = "^2.6.3"
aws-lambda-powertools = "^3.26.0"
boto3-stubs = {extras = ["bedrock-agent", "bedrock-agent-runtime", "bedrock-runtime", "cloudformation", "dynamodb", "lambda"], version = "^1.42.73"}


[tool.poetry.group.syncKnowledgeBaseFunction.dependencies]
urllib3 = "^2.6.3"
slack-bolt = "^1.25.0"
slack-sdk = "^3.40.1"
boto3 = "^1.42.73"
aws-lambda-powertools = "^3.26.0"


[tool.poetry.group.bedrockLoggingConfigFunction.dependencies]
boto3 = "^1.42.73"
urllib3 = "^2.6.2"
aws-lambda-powertools = "^3.26.0"


[tool.poetry.group.preprocessingFunction.dependencies]
boto3 = "^1.42.73"
botocore = {extras = ["crt"], version = "^1.42.73"}
aws-lambda-powertools = "^3.26.0"
markitdown = {extras = ["pdf", "docx", "xlsx"], version = "^0.0.1a12"}


[tool.black]
line-length = 120
